--- a/_posts/2018-02-11-CLI-Tools.md
+++ b/_posts/2018-02-11-CLI-Tools.md
@@ -5,37 +5,22 @@ title: Everyday CLI tools
 
 What are some CLI tools that I personally use almost everyday to help me with common tasks.
 
-Here they are:
-
-* wc
-* cut
-* grep
-* sed
-* awk
-* sort
-* uniq
-* tr
-* head and tail
-* alias
-* find
-* xargs
+Here they are: wc, cut, grep, sed, awk , sort , uniq , tr , head and tail , alias , find , xargs
 
 
 wc
 ====
-> Print line, word and byte counts
+*Print line, word and byte counts*
 
 I found the following options to be most useful to me:
 
-> -c / --bytes
-> -m / --chars
-> -l / --lines
-> -w / --words
+    -c / --bytes
+    -m / --chars
+    -l / --lines
+    -w / --words
 
 Ex. check how much lines the file `/etc/passwd` has:
 
-```
-~> wc -l /etc/passwd
-     108 /etc/passwd
-```
+    ~> wc -l /etc/passwd
+         108 /etc/passwd
 
