--- a/_posts/2018-02-11-CLI-Tools.md
+++ b/_posts/2018-02-11-CLI-Tools.md
@@ -14,10 +14,12 @@ wc
 
 I found the following options to be most useful to me:
 
+{% highlight shell %}
     -c / --bytes
     -m / --chars
     -l / --lines
     -w / --words
+{% highlight shell %}
 
 Ex. check how much lines the file `/etc/passwd` has:
 
